--- a/directory.html
+++ b/directory.html
@@ -1225,10 +1225,6 @@
           border-radius: 10px;
         "
       >
-        <h3 style="color: #2d5016; margin-bottom: 10px">For Farmers</h3>
-        <p style="color: #6c757d; margin-bottom: 15px">
-          Already registered? Access your messages and manage your listing
-        </p>
         <a
           href="farmer-messages.html"
           style="
@@ -1240,7 +1236,7 @@
             font-weight: 600;
           "
         >
-          Access Farmer Portal
+          Access Farmer Inbox
         </a>
       </div>
 
