--- a/profile.html
+++ b/profile.html
@@ -232,27 +232,37 @@
 
       /* Chat Interface Styles - Add to your existing CSS */
       .chat-container {
-        display: none;
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        width: 380px;
-        height: 480px;
-        background: white;
-        border-radius: 12px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-        z-index: 1001;
-        overflow: hidden;
-      }
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 380px;
+  height: 480px;
+  background: white;
+  border-radius: 12px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+  z-index: 1001;
+  overflow: hidden;
+  display: flex; /* Only this one */
+  flex-direction: column;
+}
+
+.chat-container.hidden {
+  display: none !important;
+}
+
+.chat-container.visible {
+  display: flex !important;
+}
 
       .chat-header {
-        background: linear-gradient(135deg, #2d5016 0%, #3f6b20 100%);
-        color: white;
-        padding: 12px 16px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
+  background: linear-gradient(135deg, #2d5016 0%, #3f6b20 100%);
+  color: white;
+  padding: 12px 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-shrink: 0; /* Prevent header from shrinking */
+}
 
       .chat-title {
         font-weight: 600;
@@ -276,11 +286,12 @@
       }
 
       .chat-messages {
-        height: 340px;
-        overflow-y: auto;
-        padding: 12px;
-        background: #f8f9fa;
-      }
+  flex: 1; /* Change from fixed height to flex */
+  overflow-y: auto;
+  padding: 12px;
+  background: #f8f9fa;
+  min-height: 0; /* Allow flex shrinking */
+}
 
       .message {
         margin-bottom: 12px;
@@ -312,11 +323,13 @@
       }
 
       .chat-input {
-        padding: 12px;
-        border-top: 1px solid #e9ecef;
-        display: flex;
-        gap: 8px;
-      }
+  padding: 12px;
+  border-top: 1px solid #e9ecef;
+  display: flex;
+  gap: 8px;
+  flex-shrink: 0; /* Prevent input area from shrinking */
+  background: white; /* Add background */
+}
 
       .chat-input input {
         flex: 1;
@@ -335,15 +348,15 @@
         background: #3f6b20;
         color: white;
         border: none;
-        border-radius: 50%;
-        width: 36px;
-        height: 36px;
+        border-radius: 10%;
+        width: 50px;
+        height: 50px;
         cursor: pointer;
         display: flex;
         align-items: center;
         justify-content: center;
         transition: all 0.3s ease;
-        font-size: 14px;
+        font-size: 1rem;
       }
 
       .send-btn:hover {
@@ -379,14 +392,16 @@
 
       /* Mobile adjustments for chat */
       @media (max-width: 768px) {
-        .chat-container {
-          width: calc(100% - 20px);
-          height: 400px;
-          bottom: 10px;
-          right: 10px;
-          left: 10px;
-        }
-      }
+  .chat-container {
+    width: calc(100% - 20px);
+    height: 400px;
+    bottom: 10px;
+    right: 10px;
+    left: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+}
 
       * {
         margin: 0;
@@ -1369,18 +1384,20 @@
       }
 
       // Open chat interface
-      function openChatInterface() {
-        document.getElementById("chatContainer").style.display = "block";
-        document.getElementById(
-          "chatTitle"
-        ).textContent = `Chat with ${currentGrowerData.farmName}`;
-        loadChatHistory();
-      }
+function openChatInterface() {
+  const chatContainer = document.getElementById("chatContainer");
+  chatContainer.classList.remove("hidden");
+  chatContainer.classList.add("visible");
+  document.getElementById("chatTitle").textContent = `Chat with ${currentGrowerData.farmName}`;
+  loadChatHistory();
+}
 
-      // Close chat interface
-      function closeChatInterface() {
-        document.getElementById("chatContainer").style.display = "none";
-      }
+// Close chat interface
+function closeChatInterface() {
+  const chatContainer = document.getElementById("chatContainer");
+  chatContainer.classList.remove("visible");
+  chatContainer.classList.add("hidden");
+}
 
       // Load chat history
       async function loadChatHistory() {
@@ -2077,7 +2094,7 @@
     </div>
 
     <!-- Chat Interface -->
-    <div id="chatContainer" class="chat-container">
+    <div id="chatContainer" class="chat-container hidden">
       <div class="chat-header">
         <div class="chat-title" id="chatTitle">Chat with Farm</div>
         <button class="chat-close" onclick="closeChatInterface()">×</button>
@@ -2092,7 +2109,7 @@
           placeholder="Type your message..."
           onkeypress="handleEnterKey(event)"
         />
-        <button class="send-btn" onclick="sendMessage()">📤</button>
+        <button class="send-btn" onclick="sendMessage()">send</button>
       </div>
     </div>
   </body>
