--- a/auth.html
+++ b/auth.html
@@ -647,7 +647,7 @@
             id="signupModeBtn"
             onclick="switchMode('signup')"
           >
-            Sign Up
+            Register
           </button>
         </div>
 
