--- a/directory.html
+++ b/directory.html
@@ -464,8 +464,7 @@
               Login
             </a>
             <a href="auth.html?mode=signup" class="farmer-btn primary">
-              
-              Sign Up
+              Register
             </a>
           </div>
         </div>
