--- a/staff-digital-profile/saravana-pillay.html
+++ b/staff-digital-profile/saravana-pillay.html
@@ -509,7 +509,7 @@
                     </div>
                     <div class="contact-label">Email</div>
                     <div class="contact-info">Professional inquiries</div>
-                    <a href="mailto:saravana.p@keboon.net" class="contact-link">saravana.p@keboon.net</a>
+                    <a href="mailto:saravanapillay@keboon.net" class="contact-link">saravanapillay@keboon.net</a>
                 </div>
                 
                 <div class="contact-card">
